[gd_scene load_steps=5 format=3 uid="uid://b4wla4tiq5v36"]

[ext_resource type="Script" uid="uid://cbqguua1lmw1q" path="res://scenes/authentication.gd" id="1_3b5bi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dm0k"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.14902, 0.117647, 0.854902, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.180392, 0.596078, 0.572549, 0.666667)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.14902, 0.117647, 0.854902, 0.564706)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Authentication" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b5bi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 36
alignment = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Email"

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Password"

[node name="anonymous_sign_in" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Sign In Anonymously"

[node name="email_sign_up" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Create User With Email Password"

[node name="email_sign_in" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Sign In With Email Password"

[node name="email_verification" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Send Email Verification"

[node name="password_reset" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Send Password Reset Email"

[node name="google_sign_in" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Sign In With Google"

[node name="get_user_data" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Get Current User Data"

[node name="is_signed_in" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Is Signed In"

[node name="sign_out" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Sign Out"

[node name="delete_user" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_7dm0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_ig7tw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0xm2m")
theme_override_styles/normal = SubResource("StyleBoxFlat_ig7tw")
text = "Delete Current User"

[node name="OutputPanel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 32

[connection signal="pressed" from="MarginContainer/VBoxContainer/anonymous_sign_in" to="." method="_on_anonymous_sign_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/email_sign_up" to="." method="_on_email_sign_up_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/email_sign_in" to="." method="_on_email_sign_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/email_verification" to="." method="_on_email_verification_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/password_reset" to="." method="_on_password_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/google_sign_in" to="." method="_on_google_sign_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/get_user_data" to="." method="_on_get_user_data_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/is_signed_in" to="." method="_on_is_signed_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/sign_out" to="." method="_on_sign_out_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/delete_user" to="." method="_on_delete_user_pressed"]
